# ga_art

./: .gitignore  README.md  README.txt  opencv_windows.md
doc/: cartesian_to_polar.vsdx
materials/: links.txt
materials/BMPA/: nejlepsi.txt  random_search.m
materials/BMPA/GA/: ELITISMUS.m  GENERUJ.m  KRIZENIreal.m  MUTACEreal.asv  MUTACEreal.m  RandomSearch.m  SELEKCE.m  funkce.m  fx1.m  fx4.m  fx5.m  gatool_options.mat  main.m
materials/BMPA/reseni GA-TSP/: GENERUJ.m  IsJedinecKo.m  KRIZENI.m  MUTACE.m  OrderCrossover.m  SELEKCE.m  VYHODNOCENI.m  funcGreedySearch.m  generatorMest.m  greedySearch1.m  greedySearch2.m  greedySearch_rozpracovane.m  main.m  main2.m  mesta-small.txt  mesta.txt  runme.m
matlab/: gen_polygons.m
vs_proj/: OpenCVDebugPropertySheet.props  OpenCVReleasePropertySheet.props
vs_proj/ga_art/: ga_art.sln
vs_proj/ga_art/ga_art/: CMakeLists.txt  ClassDiagram.cd  Configs.cpp  Configs.h  DNA.cpp  DNA.h  Evolution.cpp  Evolution.h  HillClimbing.cpp  HillClimbing.h  Polygon.cpp  Polygon.h  Population.cpp  Population.h  Random.h  constants.h  draw_polygons.cpp  draw_polygons.h  fitness.cpp  fitness.h  ga_art.vcxproj  ga_art.vcxproj.filters  hill_climb_time_meas.cpp  hill_climb_time_meas.h  hill_climbing.cpp  hill_climbing.h  main.cpp  run_hill_climb.cpp  run_hill_climb.h  utils.cpp  utils.h
vs_proj/ga_art/ga_art/configs/: config.json
vs_proj/ga_art/ga_art/logs/: DEEP ANALYTICS.html  DEEP ANALYTICS.ipynb
vs_proj/ga_art/ga_art/logs/.ipynb_checkpoints/: DEEP ANALYTICS-checkpoint.ipynb
vs_proj/opencv_test/: opencv_test.sln
(+13 files in other folders)
